tests/run-pass/parser/boolean-literal.rs
const VALUE: bool = false;

fn main() {}