tests/compile-fail/typeck/invalid-const.rs
const CONST: int = false;  //! ERROR(1:20): type mismatch: expected int, got bool

fn main() {}